--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -59,7 +59,7 @@
     			<p class="pd-l-20 font-30">Sterne: #{filmController.wochenFilm.sterne}</p>
     			</div>
 				</div>
-    			<div class="row"><div class="col-md-12 border-left border-bottom pd-t-50"><h1 class="h1padding">Top 10</h1>
+    			<div class="row"><div class="col-md-12 border-left pd-t-50"><h1 class="h1padding">Top 10</h1>
     			<div class="top10Container pd-l-25">
     			<h:dataTable value="#{filmController.top10List}" var="fi" style="border-collapse: collapse" border="0" cellpadding="10">
 		<h:column>
