--- a/src/main/webapp/alleFilme.xhtml
+++ b/src/main/webapp/alleFilme.xhtml
@@ -11,32 +11,41 @@
 
 <ui:define name="content">
 	<h:form>
-	<div class="container-fluid firstContainer container-btrap-clear ">
+	<div class="container firstContainer container-btrap-clear ">
 		<div class="row">
-			<div class="col-lg-12 textpadding pd-l-50 pd-t-30">
-				<h1 class="font-40">Filme</h1>
-				
+			<div class="col-md-10 col-md-offset-1 textpadding pd-l-50 pd-t-30">
+				<h1 class="font-40">Filme</h1>			
 		
 		<h:dataTable value="#{filmController.filme}" var="fi" style="border-collapse: collapse" border="0" cellpadding="10">
 		<h:column>
-		<f:facet name="header">Name</f:facet>
+		<f:facet name="header">Filmtitel
+			<h:commandLink action="#{filmController.sortiereFilm('NAMEAZ')}" rendered="#{!filmController.sortFilter.name}"><span class="glyphicon glyphicon-chevron-up glyph-top-4"></span></h:commandLink>
+				<h:commandLink action="#{filmController.sortiereFilm('NAMEZA')}" rendered="#{filmController.sortFilter.name}"><span class="glyphicon glyphicon-chevron-down glyph-top-4"></span></h:commandLink>
+		</f:facet>
 						<h:commandLink action="#{filmController.selectFilm(fi.name, 'FILM')}"
 							value="#{fi.name}" />
 		</h:column>
 			<h:column>
-		<f:facet name="header">Erscheinungsjahr</f:facet>
+		<f:facet name="header">Erscheinungsjahr
+						<h:commandLink action="#{filmController.sortiereFilm('NEUSTERFILM')}" rendered="#{!filmController.sortFilter.erscheinungsjahr}"><span class="glyphicon glyphicon-chevron-up glyph-top-4"></span></h:commandLink>
+				<h:commandLink action="#{filmController.sortiereFilm('AELTESTERFILM')}" rendered="#{filmController.sortFilter.erscheinungsjahr}"><span class="glyphicon glyphicon-chevron-down glyph-top-4"></span></h:commandLink>
+		</f:facet>
 		#{fi.erscheinungsjahr}
 		</h:column>
+
+
 			<h:column>
-		<f:facet name="header">Beschreibung</f:facet>
-		#{fi.beschreibung}
-		</h:column>
-			<h:column>
-		<f:facet name="header">Sterne</f:facet>
+		<f:facet name="header">Sterne
+				<h:commandLink action="#{filmController.sortiereFilm('HOECHSTESTERNE')}" rendered="#{!filmController.sortFilter.sterneUp}"><span class="glyphicon glyphicon-chevron-up glyph-top-4"></span></h:commandLink>
+				<h:commandLink action="#{filmController.sortiereFilm('NIEDRIGSTESTERNE')}" rendered="#{filmController.sortFilter.sterneUp}"><span class="glyphicon glyphicon-chevron-down glyph-top-4"></span></h:commandLink>
+		</f:facet>
 		#{fi.sterne}
 		</h:column>
 		<h:column>
-		<f:facet name="header">Datum</f:facet>
+		<f:facet name="header">Datum
+					<h:commandLink action="#{filmController.sortiereFilm('AELTESTERUPLOAD')}" rendered="#{filmController.sortFilter.upload}"><span class="glyphicon glyphicon-chevron-up glyph-top-4"></span></h:commandLink>
+					<h:commandLink action="#{filmController.sortiereFilm('NEUSTERUPLOAD')}" rendered="#{!filmController.sortFilter.upload}"><span class="glyphicon glyphicon-chevron-down glyph-top-4"></span></h:commandLink>
+		</f:facet>
 		#{fi.uploaddatum}
 		</h:column>
 		</h:dataTable>
