must see film fix

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -52,7 +52,7 @@
     		
     		<div class="col-lg-4">
     			<div class="row">
-    			<div class="col-md-12 border-left filmDerWoche"><h1 class="h1padding">Film der Woche</h1>
+    			<div class="col-md-12 border-left filmDerWoche"><h1 class="h1padding">Must See</h1>
     			<h2 class="pd-l-20">#{filmController.wochenFilm.name}</h2>
     			<p class="pd-l-20">Dauer: #{filmController.wochenFilm.dauer}</p>
     			<p class="pd-l-20">Erscheinungsjahr: #{filmController.wochenFilm.erscheinungsjahr}</p>
