--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -40,8 +40,8 @@
 			</div>
 			<div class="row mg-t-b-20 border-bottom">
 			<div class="col-sm-3 pd-l-45"><p class="font-15">Uploader: #{fi.ersteller.benutzername}</p></div>
-			<div class="col-sm-5"><p class="font-15">Upload-Datum: #{fi.uploaddatum}</p></div>
-			<div class="col-sm-3"><p class="font-15">Dauer: #{fi.dauer}</p></div>
+			<div class="col-sm-5"><p class="font-15">Upload-Datum: #{fi.formatDatum}</p></div>
+			<div class="col-sm-3"><p class="font-15">Dauer: #{fi.dauer} min</p></div>
 			</div>
 			
 		</h:column>	
