neues film bald

--- a/src/main/webapp/film.xhtml
+++ b/src/main/webapp/film.xhtml
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-lg-6 textpadding pd-l-50 pd-t-30">
 				<h1 class="font-50">#{filmController.film.name}</h1>
-				<img class="mg-l-70 pd-t-20 w250" src="assets/img/django.jpg"></img>
+				<img class="mg-l-70 mg-t-50 w250 border-dotted-b" src="assets/img/filmbild.jpg"></img>
 				<h:form>
     <h:selectOneRadio rendered="#{BenutzerController.loggedIn}" name="voteStars" id="voteStars" class="voteStars mg-l-70 mg-t-20" value="#{filmController.bewertungSterne}">
         <f:selectItem itemLabel="1" id="item1"  itemValue="1" />
