--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
 
 
     <div class="container-fluid firstContainer container-btrap-clear ">
-    <h1 class="h1padding">Neue Uploads</h1>	
+    <h1 class="h1padding mg-t-50">Neue Uploads</h1>	
     	<div class="row">
     		<div class="col-lg-8">
     		
@@ -27,7 +27,7 @@
 			<div class="row">
 			<div class="col-sm-4">
 			<div class="picContainer">
-				<img class="responsive" src="assets/img/et_3.jpg"></img>
+				<img class="responsive border-dotted-b" src="assets/img/filmbild.jpg"></img>
 				</div>
 			</div>
 			 <div class="col-sm-8">
