--- a/src/main/webapp/film.xhtml
+++ b/src/main/webapp/film.xhtml
@@ -38,7 +38,7 @@
 				<h2>#{msg['filmErscheinungsjahr']}</h2>
 				<p>#{filmController.film.erscheinungsjahr}</p>
 				<h2>#{msg['filmDauer']}</h2>
-				<p>#{filmController.film.dauer}</p>
+				<p>#{filmController.film.dauer} min</p>
 				<h2>#{msg['filmMitwirkende']}</h2>
 				<p>#{filmController.getMitwirkende()}</p>
 				<div class="starsContainer">
