--- a/src/main/webapp/ueberUns.xhtml
+++ b/src/main/webapp/ueberUns.xhtml
@@ -12,7 +12,7 @@
 	<div class="containerRegistieren">
 	<div class="row">
 		<div class="col-md-12">
-			<div id="registrieren">
+			<div id="registrieren" class="pd-b-50">
 				<h1 class="font-50 pd-b-50">Über Uns</h1>
 			<h3>Vural Yilmaz</h3>
 			<h3>Christin Ubben</h3>
