admin Bereich film löschen

--- a/src/main/webapp/benutzerVerwalten.xhtml
+++ b/src/main/webapp/benutzerVerwalten.xhtml
@@ -70,7 +70,7 @@
 
 
  
-        		<h:outputLabel class="statusMessage" id="outputMessage" value="#{benutzerDAO.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
+        		<h:outputLabel class="statusMessage" id="outputMessage" value="#{benutzerDAO.sqlStatus}" infoClass="infoMessage"></h:outputLabel>
         
     		</h:form>
              	</div>
