--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -54,7 +54,7 @@
 					<div class="row">
 						<div class="col-sm-3 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
 						<div class="col-sm-9">
-							<h:inputTextarea class="beschreibunginput" value="#{filmController.film.beschreibung}"  required="true" requiredMessage="Bitte fügen Sie eine Beschreibung hinzu" ></h:inputTextarea>
+							<h:inputTextarea wrap="soft" class="beschreibunginput" value="#{filmController.film.beschreibung}"  required="true" requiredMessage="Bitte fügen Sie eine Beschreibung hinzu" ></h:inputTextarea>
 						</div>
 					
 					</div>
