Bilder upload raus

--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -63,8 +63,10 @@
 
 
 				<div class="col-lg-4">
-					<div id="film-img" class=""></div>
-					<h:button id="uploadFotoButton" class="uploadFotoButtonClass" value="#{msg['filmFotoUpload']}"></h:button>
+					<h2>Beschreibung</h2>
+					Bitte füllen Sie jede Position aus.
+					no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+					
 				</div>
 		</div>
 			<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmErstellen(filmController.film)}" ><f:setPropertyActionListener target="#{filmController.film.ersteller}" value="#{BenutzerController.benutzer}" /></h:commandButton></div></div>
