--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			 <div class="col-md-8">
-			 <h2><h:commandLink class="titellink" action="#{filmController.selectFilm(fi.name, 'FILM')}" value="#{fi.name}" /></h2>
+			 <h2><h:commandLink class="titellink" action="#{filmController.selectFilm(fi.name,fi.erscheinungsjahr, 'FILM')}" value="#{fi.name}" /></h2>
 			 <h4 class="pd-t-20">Beschreibung</h4>
 			 <p>#{fi.beschreibung}</p>
 
