Kleine Anpassung, Update nutzt jetzt wirklich update

--- a/src/main/webapp/filmUpdate.xhtml
+++ b/src/main/webapp/filmUpdate.xhtml
@@ -52,7 +52,7 @@
 						</div>
 					
 					</div>
-					<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmErstellen(filmController.film)}" ></h:commandButton></div></div>
+					<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmUpdate(filmController.film)}" ></h:commandButton></div></div>
 
 			</div>
 			
