--- a/src/main/webapp/filmUpdate.xhtml
+++ b/src/main/webapp/filmUpdate.xhtml
@@ -19,14 +19,14 @@
 				</h1>
 				
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmName']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmName']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 						<h:inputText id="filmname" class="" value="#{filmController.film.name}" disabled="true"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmGenre']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmGenre']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							<h:selectOneMenu class="inputmarginbottom-15"
 								value="#{filmController.film.genre}" disabled="true">
 								<f:selectItems value="#{filmController.genreValues}" />
@@ -34,20 +34,26 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmDauer']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmErscheinungsjahr']}</div>
+					<div class="col-xs-9 inputpd-80-768">
+							<h:inputText class="" value="#{filmController.film.erscheinungsjahr}"  required="true" requiredMessage="Bitte geben Sie das Erscheinungsjahr an" disabled="true"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmDauer']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							<h:inputText class="" value="#{filmController.film.dauer}" disabled="true"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmMitwirkende']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmMitwirkende']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							 <my:dynamicFieldList value="#{filmController.felder}" disabled="true"/>
 					</div>
 				</div>
 					<div class="row">
-						<div class="col-sm-2 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
-						<div class="col-sm-10">
+						<div class="col-sm-3 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
+						<div class="col-sm-9">
 							<h:inputTextarea class="beschreibunginput" value="#{filmController.film.beschreibung}" ></h:inputTextarea>
 						</div>
 					
