--- a/src/main/webapp/filmUpdate.xhtml
+++ b/src/main/webapp/filmUpdate.xhtml
@@ -11,7 +11,7 @@
 
 <ui:define name="content">
 	<h:form>
-	<div class="container-fluid firstContainer container-btrap-clear ">
+	<div class="container firstContainer container-btrap-clear ">
 		<div class="row">
 			<div class="col-lg-8 textpadding pd-l-50">
 				<h1>
@@ -58,9 +58,16 @@
 						</div>
 					
 					</div>
-					<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmUpdate(filmController.film)}" ></h:commandButton></div></div>
+					</div>
+						<div class="col-lg-4">
+					<h2>Beschreibung</h2>
+					Bitte füllen Sie jede Position aus.
+					no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+					
+				</div>
+					<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="mg-l-15" value="#{msg['filmSpeichern']}" action="#{filmController.filmUpdate(filmController.film)}" ></h:commandButton></div></div>
 
-			</div>
+			
 			
 		</div>
 	</div>
