--- a/src/main/webapp/secured/benutzerVerwalten.xhtml
+++ b/src/main/webapp/secured/benutzerVerwalten.xhtml
@@ -7,7 +7,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:a = "http://xmlns.jcp.org/jsf/passthrough">
-<ui:composition template = "/templates/commom-template.xhtml">
+<ui:composition template = "../templates/commom-template.xhtml">
 	
 		<ui:define name="content">
         <div class="containerRegistieren">
