--- a/src/main/webapp/secured/eigeneFilme.xhtml
+++ b/src/main/webapp/secured/eigeneFilme.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
-<ui:composition template = "/templates/commom-template.xhtml">
+<ui:composition template = "../templates/commom-template.xhtml">
 <f:metadata>
 	<f:event listener="#{filmController.filmFuerErsteller}" type="preRenderView" />
 </f:metadata>
