--- a/src/main/webapp/secured/filmformular.xhtml
+++ b/src/main/webapp/secured/filmformular.xhtml
@@ -7,7 +7,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:my="http://java.sun.com/jsf/composite/components">
-<ui:composition template = "/templates/commom-template.xhtml">
+<ui:composition template = "../templates/commom-template.xhtml">
 
 <ui:define name="content">
 	<h:form>
