--- a/src/main/webapp/secured/benutzerVerwalten.xhtml
+++ b/src/main/webapp/secured/benutzerVerwalten.xhtml
@@ -59,7 +59,7 @@
 							<h:commandButton value="Speichern"
 								action="#{BenutzerController.benutzerVerwalten(input1.value,input2.value, input3.value, input4.value)}"
 								update=":benutzer, :message"
-								rendered="#{!BenutzerController.nutzernameVorhanden and !BenutzerController.emailVorhanden}">
+								rendered="#{!BenutzerController.nutzernameInDBVorhanden and !BenutzerController.emailInDBVorhanden}">
 							</h:commandButton>
 						</h:panelGroup>
 
