--- a/src/main/webapp/film.xhtml
+++ b/src/main/webapp/film.xhtml
@@ -9,13 +9,19 @@
 	xmlns:my="http://java.sun.com/jsf/composite/components">
 <ui:composition template = "/templates/commom-template.xhtml">
 
+
 <ui:define name="content">
+<f:metadata>
+	<f:event listener="#{filmController.filmBereitsBewertet()}" type="preRenderView" />
+
+</f:metadata>
 	<h:form>
 	<div class="container-fluid firstContainer container-btrap-clear ">
 		<div class="row">
 			<div class="col-lg-6 textpadding pd-l-50 pd-t-30">
 				<h1 class="font-50">#{filmController.film.name}</h1>
 				<img class="mg-l-70 mg-t-50 w250 border-dotted-b" src="assets/img/filmbild.jpg"></img>
+				<h:panelGroup rendered="#{BenutzerController.loggedIn}">
     <h:selectOneRadio  rendered="#{BenutzerController.loggedIn}" name="voteStars" id="voteStars" class="voteStars mg-l-20 mg-t-20" value="#{filmController.bewertungSterne}">
         <f:selectItem itemLabel="1" id="item1"  itemValue="1"  />
         <f:selectItem itemLabel="1.5" id="item2"  itemValue="1.5" />
@@ -27,9 +33,9 @@
         <f:selectItem itemLabel="4.5" id="item8"  itemValue="4.5" />
         <f:selectItem itemLabel="5" id="item9"  itemValue="5" />
     </h:selectOneRadio>
-			<h:commandButton rendered="#{BenutzerController.loggedIn}" class="btn btn-default bewerteButton" type="submit" action="#{filmController.bewerteFilm()}" value="Bewerte">
+			<h:commandButton rendered="#{filmController.filmBewertet}" class="btn btn-default bewerteButton" type="submit" action="#{filmController.bewerteFilm()}" value="Bewerte">
 										</h:commandButton>
-
+</h:panelGroup>
 		</div>
 			
 			<div class="col-lg-6 textpadding pd-l-50 pd-t-50">
