--- a/src/main/webapp/secured/filmUpdate.xhtml
+++ b/src/main/webapp/secured/filmUpdate.xhtml
@@ -77,6 +77,7 @@
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="../assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		//<![CDATA[
 		$(window).load(function() { // makes sure the whole site is loaded
