--- a/src/main/webapp/alleFilme.xhtml
+++ b/src/main/webapp/alleFilme.xhtml
@@ -7,7 +7,9 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition template = "/templates/commom-template.xhtml">
-
+<f:metadata>
+	<f:event listener="#{filmController.alleFilme}" type="preRenderView" />
+</f:metadata>
 
 <ui:define name="content">
 	<h:form>
