--- a/src/main/webapp/secured/filmformular.xhtml
+++ b/src/main/webapp/secured/filmformular.xhtml
@@ -44,7 +44,9 @@
 				<div class="row">
 					<div class="col-xs-3 txt-pd-l-20">#{msg['filmDauer']}</div>
 					<div class="col-xs-9 inputpd-80-768">
-							<h:inputText class="" value="#{filmController.film.dauer}"   required="true" requiredMessage="Bitte geben Sie die Filmdauer an" ></h:inputText>
+							<h:inputText class="" value="#{filmController.film.dauer}"   required="true" requiredMessage="Bitte geben Sie die Filmdauer an" >
+								<f:validateLength minimum="2" maximum="3" />
+							</h:inputText>
 					</div>
 				</div>
 				
